# SimTradeLab

./: .flake8  .gitattributes  .gitignore  .ruff-baseline.json  CHANGELOG.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE.zh-CN  MANIFEST.in  PROJECT_PROGRESS.md  PTrade_API_Implementation_Status.md  README.de.md  README.md  README.zh-CN.md  TESTING_INCIDENT_REPORT.md  config.yaml  debug_adapter_config.py  debug_detailed_test.py  main.py  ptradeSim.py  ptrade_config.yaml  pyproject.toml  run_tests.py  setup.py  simtradelab_config.yaml  start_web.py  test_financial_apis.py
.github/: release-template.md
.github/workflows/: auto-tag.yml  build-wheels.yml  documentation-contracts.yml  publish.yml  pylint.yml  release-notes.yml  sync-dev.yml  test.yml
.roo/: mcp.json
data/: ptrade_adj_pre.h5  ptrade_data.h5  ptrade_fundamentals.h5  sample_data.csv
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_FORMAT.md  DATA_MIGRATION_GUIDE.md  DEVELOPMENT_RULES.md  FXMACRODATA_EVENT_FILTER.md  IDE_SETUP.md  INSTALLATION.md  Implementation_Analysis_Report.md  MULTI_FREQUENCY_TRADING.md  Optimization_Suggestions_Analysis.md  PTrade_API_Implementation_Status.md  PTrade_API_Summary.md  PTrade_Backtest_API_Support_Matrix.md  PTrade_Objects_Complete_Summary.md  PYPI_INSTALLATION_GUIDE.md  README.md  REAL_DATA_SOURCES.md  RELEASE.md  SIMTRADELAB_API_COMPLETE_REFERENCE.md  STRATEGY_GUIDE.md  STRATEGY_RUNTIME_BOUNDARIES.md  SimTradeLab_Analysis_Report.md  SimTradeLab_Complete_Plugin_Architecture_v4.0.md  SimTradeLab_Complete_Plugin_Architecture_v5.0.md  SimTradeLab_Current_Progress_Report.md  SimTradeLab_Software_Architecture_and_Design.md  SimTradeLab_v4_Architecture_Design_Thoughts.md  SimTradeLab_v4_Implementation_TODO.md  SimTradeLab_v5_Implementation_TODO.md  TECHNICAL_INDICATORS.md  TESTING_AUDIT_REPORT.md  TESTING_AUDIT_SUMMARY.md  TESTING_GUIDE.md  TESTING_INCIDENT_REPORT.md  TESTING_REFACTOR_PLAN.md  TOOLS.md
docs/api_snapshots/: core_api_signature_matrix_2026-04-13.json
docs/plans/: 2026-02-18-desktop-app-design.md  2026-02-18-desktop-app-plan.md
examples/: cloud_event_usage.py
examples/hello_plugin/: hello_plugin.py  test_hello_plugin.py
packaging/: build_server.bat  build_server.sh  server.spec
ptradeSim/: __init__.py  api.py  context.py  engine.py  market_data.py  performance.py  trading.py  utils.py
ptradeSim/config/: data_config.py
reports/: .gitkeep
script/: RELEASE.md  check_ruff_baseline.py  local_strategy_regression.py
scripts/: AUTO_RELEASE_NOTES_GUIDE.md  RELEASE.md  RELEASE_GUIDE.md  check_code_completeness.py  generate_release_notes.py  release.py  report_manager_cli.py  setup_typeshed.sh  slice_all.py  slice_data.py  slice_fundamentals.py  test-package.py  verify_cross_platform.py  windows_install_troubleshoot.py
src/: __init__.py  cli.py  engine.py
src/ptradesim/: __init__.py  cli.py  performance.py  report_generator.py
src/simtradelab/: __init__.py  base.py  cli.py  codecheck.py  config_manager.py  context.py  engine.py  exceptions.py  i18n.py  logger.py  market_data.py  paths.py  report_generator.py  report_manager.py  runner.py  trading.py  utils.py
strategies/: __init__.py  benchmark_strategy.py  buy_and_hold_strategy.py  compatibility_strategy.py  dual_moving_average_strategy.py  grid_trading_strategy.py  minute_trading_strategy.py  momentum_strategy.py  real_data_strategy.py  simple_dual_ma_strategy.py  technical_indicator_strategy.py  test_api_strategy.py  test_strategy.py  trading_calendar_strategy.py  trading_query_strategy.py  web_demo_ma_cross.py  web_demo_rsi_strategy.py
strategies/20mv/: backtest.py
strategies/5mv/: 5mv_backup_strategy.py  README.md  TROUBLESHOOTING.md  backtest.py
strategies/debug/: backtest.py
strategies/multi_factor/: backtest.py
strategies/random/: backtest.py
strategies/simple/: backtest.py
tests/: FINANCIAL_APIS_ENHANCEMENT.md  MARKET_DATA_ENHANCEMENT.md  PROJECT_STATUS_SUMMARY.md  README.md  TEST_STATUS_REPORT.md  __init__.py  conftest.py  ptrade_api_contracts.py  test_advanced_strategies.py  test_all_features.py  test_api_functions.py  test_api_injection.py  test_api_naming_consistency.py  test_basic_tools_apis.py  test_benchmark_performance.py  test_calendar_demo.py  test_cli.py  test_compatibility.py  test_compatibility_demo.py  test_data_layer.py  test_data_sources.py  test_engine.py  test_error_handling.py  test_exceptions.py  test_financial_apis.py  test_get_history_fix.py  test_integration.py  test_logger.py  test_market_data_apis.py  test_minute_trading.py  test_missing_apis.py  test_performance_stress.py  test_real_data_demo.py  test_real_data_sources.py  test_runner.py  test_strategy_data_analyzer.py  test_strategy_execution.py  test_technical_indicators.py  test_technical_strategy.py  test_trading_calendar.py  (+2 more)
tests/adapters/: __init__.py
tests/assets/: dummy_strategy.py
tests/backtest/: test_commission_models.py  test_engine.py  test_matching_engines.py  test_performance.py  test_portfolio.py  test_slippage_models.py
tests/core/: test_cloud_event.py  test_plugin_manager.py  test_plugin_manager_config_validation.py
tests/e2e/: test_real_world_scenarios.py
tests/integration/: __init__.py  test_data_server_incremental_loading.py  test_enhanced_reports.py  test_final_reporting.py  test_integration.py  test_simplified_reporting.py  test_strategy_execution.py
tests/performance/: test_performance.py
tests/plugins/: test_base.py  test_technical_indicators_plugin.py
tests/server/: conftest.py  test_backtest_router.py  test_log_streamer.py  test_strategies_router.py  test_task_manager.py
tests/support/: __init__.py  base_plugin_test.py
tests/test_adapters/: __init__.py  test_ptrade_adapter.py  test_ptrade_api_router.py  test_ptrade_indicators.py
tests/test_backtest/: __init__.py  test_commission_models.py  test_engine.py  test_matching_engines.py  test_slippage_models.py
tests/test_core/: test_cloud_event.py  (+5 more)
typings/: builtins.pyi
ui/: .gitignore  package-lock.json  package.json
web/: README.md
(+288 files in other folders)
