# Poetry configuration
[tool.poetry]
name = "simtradelab"
version = "2.4.2"
description = "开源策略回测框架，灵感来自PTrade的事件驱动模型，提供轻量、清晰、可插拔的策略验证环境"
authors = ["kay <kayou@duck.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "simtradelab", from = "src"}]
homepage = "https://github.com/kay-ou/SimTradeLab"
repository = "https://github.com/kay-ou/SimTradeLab"
documentation = "https://github.com/kay-ou/SimTradeLab/tree/main/docs"
keywords = ["quantitative", "backtest", "trading", "strategy", "ptrade", "finance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.0"
pyarrow = ">=10.0.0"
numpy = ">=1.20.0,<2.0"
cachetools = "^5.0.0"
joblib = "^1.0.0"
matplotlib = "^3.5.0"
tqdm = "^4.0.0"
pydantic = "^2.0.0"
ta-lib = {version = "*", optional = true}
optuna = {version = "^3.0.0", optional = true}
fastapi   = {version = "^0.115.0", optional = true}
uvicorn   = {version = "^0.34.0",  optional = true, extras = ["standard"]}

[tool.poetry.extras]
indicators = ["ta-lib"]
optimizer  = ["optuna"]
server     = ["fastapi", "uvicorn"]
all        = ["ta-lib", "optuna", "fastapi", "uvicorn"]

[tool.poetry.scripts]
simtradelab = "simtradelab.cli.serve:main"

[tool.poetry.group.dev.dependencies]
baostock        = "^0.8.9"
jupyter         = "^1.1.1"
pytest          = "^8.0.0"
pytest-asyncio  = "^0.24.0"
httpx           = "^0.27.0"
pyinstaller = {version = ">=6.19.0", python = ">=3.9,<3.15"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
