# Poetry configuration
[tool.poetry]
name = "simtradelab"
version = "2.7.0"
description = "Lightweight quantitative backtesting framework with PTrade API simulation | 轻量级量化回测框架"
authors = ["kay <kayou@duck.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "simtradelab", from = "src"}]
homepage = "https://github.com/kay-ou/SimTradeLab"
repository = "https://github.com/kay-ou/SimTradeLab"
documentation = "https://github.com/kay-ou/SimTradeLab/tree/main/docs"
keywords = ["quantitative", "backtest", "trading", "strategy", "ptrade", "finance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.0"
pyarrow = ">=10.0.0"
numpy = ">=1.20.0,<2.0"
cachetools = "^5.0.0"
joblib = "^1.0.0"
matplotlib = "^3.5.0"
tqdm = "^4.0.0"
pydantic = "^2.0.0"
ta-lib = {version = "*", optional = true}
optuna = {version = "^3.0.0", optional = true}

[tool.poetry.extras]
indicators = ["ta-lib"]
optimizer  = ["optuna"]
all        = ["ta-lib", "optuna"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
